crates/bc-cli/tests/cli/snapshots/cli__transaction__amend_after_reversal_succeeds.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 284
expression: output
---
success: true
exit_code: 0
----- stdout -----
Amended transaction: [TRANSACTION_ID]
----- stderr -----
