crates/bc-cli/tests/cli/snapshots/cli__transaction__amend_clear_payee.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 337
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "id": "[TRANSACTION_ID]",
  "date": "2026-03-01",
  "payee": null,
  "description": "Coffee",
  "postings": [
    {
      "id": "[POSTING_ID]",
      "account_id": "[ACCOUNT_ID]",
      "amount": {
        "value": "-5.00",
        "commodity": "AUD"
      },
      "cost": null,
      "note": null,
      "tag_ids": [],
      "spread_from": null,
      "spread_until": null
    },
    {
      "id": "[POSTING_ID]",
      "account_id": "[ACCOUNT_ID]",
      "amount": {
        "value": "5.00",
        "commodity": "AUD"
      },
      "cost": null,
      "note": null,
      "tag_ids": [],
      "spread_from": null,
      "spread_until": null
    }
  ],
  "reconciliation": "reconciled",
  "tag_ids": [],
  "link_ids": [],
  "created_at": "[TIMESTAMP]"
}
----- stderr -----
