crates/bc-cli/tests/cli/snapshots/cli__transaction__amend_date_only.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Amended transaction: [TRANSACTION_ID]
----- stderr -----
