crates/bc-cli/tests/cli/snapshots/cli__transaction__amend_rejects_setting_and_clearing_one_key.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --meta and --clear-meta both name 'note': one sets the key, the other removes it
