crates/bc-cli/tests/cli/snapshots/cli__transaction__amend_voided_returns_error.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 3
----- stdout -----
----- stderr -----
error: transaction already voided: [TRANSACTION_ID]
