crates/bc-cli/tests/cli/snapshots/cli__transaction__delete_existing_transaction.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Deleted transaction: [TRANSACTION_ID]
----- stderr -----
