crates/bc-cli/tests/cli/snapshots/cli__transaction__delete_nonexistent_transaction_returns_error.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: [TRANSACTION_ID]
