crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_adds_a_posting_by_selector.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Edited transaction: Grocery shopping (2026-03-01)
----- stderr -----
