crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_date_only.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 630
expression: output
---
success: true
exit_code: 0
----- stdout -----
Edited transaction: [TRANSACTION_ID]
----- stderr -----
